<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppLogistica</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usuario">Usuário</string>
    <string name="nome_motorista">Nome Motorista</string>
    <string name="id_motorista">Id Motorista</string>
    <string name="login_view">Visualizacao Login</string>
    <string name="logo">Logo do Chinoca</string>
    <string name="title_activity_entregas">EntregasActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_produtos_entrega">ProdutosEntregaActivity</string>
    <string name="title_activity_detalhes_entrega">DetalhesEntregaActivity</string>
    <string name="seeContacts">Ver Contatos</string>
    <string name="rota">Melhor rota:</string>
    <!-- Tela Detalhes da Entrega -->
    <string name="delivery_details">Detalhes da entrega</string>
    <string name="client">Cliente:</string>
    <string name="address">Endereço:</string>
    <string name="responsible">Nome do responsavel:</string>
    <string name="order">Ordem de entrega:</string>
    <string name="volume">Volume:</string>
    <string name="gln">GLN:</string>
    <string name="sincronizar">Finalizar Entrega</string>
    <string name="dh_max">Data/Hora maxima para entrega:</string>
    <string name="phone">Telefone de contato:</string>
    <string name="dh_delivery">Data/Hora da Entrega:</string>
    <string name="document_image">Imagem do documento:</string>
    <string name="denied">Erro</string>
    <string name="strAll">Marcar todos</string>
    <string name="deniedMsg">Não existem dados a serem exibidos</string>
    <string name="title_activity_denied">DeniedActivity</string>

</resources>