<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginViewActivity" >

   <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >
   <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:contentDescription="@string/logo"
                android:layout_height="wrap_content"
                android:src="@drawable/chinoca_xpress" />
    <TextView
        android:id="@+id/nome_motorista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/nome_motorista" />
    
    <TextView
        android:id="@+id/id_motorista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/id_motorista" />
    </LinearLayout>

</RelativeLayout>